src/objects/ACED_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Assets_Activity__c</fullName>
        <inlineHelpText>This is a helptext for Assest/Activity</inlineHelpText>
        <label>Assets/Activity</label>
        <referenceTo>ACED_Activity__c</referenceTo>
        <relationshipLabel>Actual Costs</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <inlineHelpText>This is a helptext for Cost</inlineHelpText>
        <label>Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This is a helptext for Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>This is a helptext for Notes</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Cost__c</columns>
        <columns>NAME</columns>
        <columns>Assets_Activity__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cost_By_Currency</fullName>
        <columns>NAME</columns>
        <columns>Cost__c</columns>
        <columns>Assets_Activity__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
        </filters>
        <label>Cost By Currency</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Cost Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>